--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
-    "start" : "node build",
+    "start": "node build",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -12,6 +12,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.55",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
@@ -26,14 +27,14 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3",
-    "@sveltejs/adapter-node": "^1.0.0-next.55"
+    "typescript": "^4.4.3"
   },
   "type": "module",
   "dependencies": {
     "@elderjs/plugin-seo-check": "^1.3.4",
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "svelte-seo": "^1.3.1"
   }
 }
