--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@apollo/client": "^3.5.5",
     "@sveltejs/adapter-node": "^1.0.0-next.55",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
@@ -34,7 +35,11 @@
     "@elderjs/plugin-seo-check": "^1.3.4",
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "apollo-boost": "^0.4.9",
     "cookie": "^0.4.1",
+    "graphql": "^15.7.2",
+    "node-fetch": "^3.1.0",
+    "svelte-apollo": "^0.4.0",
     "svelte-seo": "^1.3.1"
   }
 }
