--- a/package.json
+++ b/package.json
@@ -12,34 +12,54 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@apollo/client": "^3.5.5",
+    "@apollo/client": "^3.4.16",
+    "@lukeed/uuid": "^2.0.0",
     "@sveltejs/adapter-node": "^1.0.0-next.55",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "cookie": "^0.4.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "graphql": "^15.7.2",
+    "node-fetch": "^3.1.0",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.34.0",
+    "svelte-apollo": "^0.4.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
+    "svelte-seo": "^1.3.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
   "type": "module",
   "dependencies": {
-    "@elderjs/plugin-seo-check": "^1.3.4",
-    "@fontsource/fira-mono": "^4.5.0",
+    "@apollo/client": "^3.4.16",
     "@lukeed/uuid": "^2.0.0",
-    "apollo-boost": "^0.4.9",
+    "@sveltejs/adapter-node": "^1.0.0-next.55",
+    "@sveltejs/adapter-vercel": "next",
+    "@sveltejs/kit": "next",
+    "@types/cookie": "^0.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "cookie": "^0.4.1",
-    "graphql": "^15.7.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "graphql-request": "^3.6.1",
     "node-fetch": "^3.1.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.34.0",
     "svelte-apollo": "^0.4.0",
-    "svelte-seo": "^1.3.1"
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.9.4",
+    "svelte-seo": "^1.3.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   }
 }
