adding the correct logo for splash-screen and ttempting fix at the invalid-serviceWorker.js

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,6 @@
 
 {
     "short_name": "betarena-scores-platform",
-    "description": "Betarena Official Scores Platform",
     "name": "Betarena | Scores Platform",
     "start_url": "/",
     "icons": [
@@ -17,10 +16,11 @@
       }
     ],
     "background_color": "#292929",
-    "theme_color": "#292929",
-    "display": "minimal-ui",
+    "display": "standalone",
     "scope": "/",
+    "theme_color": "#292929",
     "shortcuts": [
       
-    ]
+    ],
+    "description": "Betarena Official Scores Platform"
 }
