--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,12 +7,14 @@
       {
         "src": "/assets/img/192x192.png",
         "type": "image/png",
-        "sizes": "192x192"
+        "sizes": "192x192",
+        "purpose": "any maskable"
       },
       {
         "src": "/assets/img/512x512.png",
         "type": "image/png",
-        "sizes": "512x512"
+        "sizes": "512x512",
+        "purpose": "any maskable"
       }
     ],
     "background_color": "#292929",
