--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
   },
   "type": "module",
   "dependencies": {
-    "graphql-request": "^3.6.1",
-    "svelte": "^3.34.0",
+    "colorthief": "^2.3.2",
     "cookie": "^0.4.1",
+    "firebase": "^9.6.0",
     "graphql": "^15.7.2",
+    "graphql-request": "^3.6.1",
+    "grpc": "^1.24.11",
     "node-fetch": "^3.1.0",
+    "svelte": "^3.34.0",
     "svelte-apollo": "^0.4.0",
+    "svelte-content-loader": "^1.1.3",
     "svelte-seo": "^1.3.1"
   }
 }
