--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "graphql": "^15.7.2",
     "graphql-request": "^3.6.1",
     "node-fetch": "^3.1.0",
+    "npm": "^8.3.0",
     "svelte": "^3.34.0",
-    "svelte-apollo": "^0.4.0",
     "svelte-content-loader": "^1.1.3",
     "svelte-seo": "^1.3.1"
   }
