--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
 
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build --no-cache --progress=plain --tag scores-platform:$(date +%s) .
