--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "version": "0.5.0",
+  "engines": {
+    "npm": "8.3.0",
+    "node": "14.17.4"
+  },
   "scripts": {
     "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
