--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "my-app",
-  "version": "0.0.1",
+  "version": "0.5.0",
+  "engines": {
+    "npm": "8.3.0",
+    "node": "14.17.4"
+  },
   "scripts": {
     "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
     "start": "node build",
-    "preview": "svelte-kit preview",
+    "preview": "svelte-kit preview --host --port 5000",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ." 
   },
   "devDependencies": {
     "@lukeed/uuid": "^2.0.0",
@@ -35,12 +39,14 @@
   },
   "type": "module",
   "dependencies": {
-    "graphql-request": "^3.6.1",
-    "svelte": "^3.34.0",
+    "colorthief": "^2.3.2",
     "cookie": "^0.4.1",
+    "firebase": "^9.6.0",
     "graphql": "^15.7.2",
+    "graphql-request": "^3.6.1",
     "node-fetch": "^3.1.0",
-    "svelte-apollo": "^0.4.0",
+    "svelte": "^3.34.0",
+    "svelte-content-loader": "^1.1.3",
     "svelte-seo": "^1.3.1"
   }
 }
