--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
     "start": "node build",
-    "preview": "svelte-kit preview",
+    "preview": "svelte-kit preview --host --port 5000",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ." 
   },
   "devDependencies": {
     "@lukeed/uuid": "^2.0.0",
