--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,28 +1,25 @@
-
 {
-    "short_name": "betarena-scores-platform",
-    "name": "Betarena | Scores Platform",
-    "start_url": "/",
-    "icons": [
-      {
-        "src": "/assets/img/192x192.png",
-        "type": "image/png",
-        "sizes": "192x192",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/img/512x512.png",
-        "type": "image/png",
-        "sizes": "512x512",
-        "purpose": "any maskable"
-      }
-    ],
-    "background_color": "#292929",
-    "display": "standalone",
-    "scope": "/",
-    "theme_color": "#292929",
-    "shortcuts": [
-      
-    ],
-    "description": "Betarena Official Scores Platform"
+	"short_name": "betarena-scores-platform",
+	"name": "Betarena | Scores Platform",
+	"start_url": "/",
+	"icons": [
+		{
+			"src": "/assets/img/192x192.png",
+			"type": "image/png",
+			"sizes": "192x192",
+			"purpose": "any maskable"
+		},
+		{
+			"src": "/assets/img/512x512.png",
+			"type": "image/png",
+			"sizes": "512x512",
+			"purpose": "any maskable"
+		}
+	],
+	"background_color": "#292929",
+	"display": "standalone",
+	"scope": "/",
+	"theme_color": "#292929",
+	"shortcuts": [],
+	"description": "Betarena Official Scores Platform"
 }
