--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"node": "14.17.4"
 	},
 	"scripts": {
-		"dev": "svelte-kit dev --host --port 5050",
+		"dev": "svelte-kit dev --host --port 3000",
 		"build": "svelte-kit build",
 		"start": "node build",
 		"preview": "svelte-kit preview --host --port 5000",
@@ -44,6 +44,7 @@
 		"firebase": "^9.6.0",
 		"graphql": "^15.7.2",
 		"graphql-request": "^3.6.1",
+		"ioredis": "^4.28.2",
 		"node-fetch": "^3.1.0",
 		"svelte": "^3.34.0",
 		"svelte-content-loader": "^1.1.3",
