--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"devDependencies": {
 		"@lukeed/uuid": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.55",
+		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.1",
