--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"node": "14.17.4"
 	},
 	"scripts": {
-		"dev": "svelte-kit dev --host --port 3050 --https",
+		"dev": "svelte-kit dev --host --port 3050",
 		"build": "svelte-kit build",
-		"start": "node build",
+		"start": "node my-server.js",
 		"preview": "svelte-kit preview --host --port 5000",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -41,9 +41,12 @@
 	"dependencies": {
 		"colorthief": "^2.3.2",
 		"cookie": "^0.4.1",
+		"express": "^4.17.3",
+		"express-sslify": "^1.2.0",
 		"firebase": "^9.6.0",
 		"graphql": "^15.7.2",
 		"graphql-request": "^3.6.1",
+		"heroku-ssl-redirect": "^0.1.1",
 		"ioredis": "^4.28.2",
 		"node-fetch": "^3.1.0",
 		"svelte": "^3.34.0",
