--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"heroku-ssl-redirect": "^0.1.1",
 		"ioredis": "^4.28.2",
 		"node-fetch": "^3.1.0",
+		"sapper-google-analytics": "^1.0.2",
 		"svelte": "^3.34.0",
 		"svelte-content-loader": "^1.1.3",
 		"svelte-seo": "^1.3.1"
