--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@beyonk/svelte-google-analytics": "^2.2.0",
+		"@lukeed/uuid": "^2.0.0",
 		"@sveltejs/adapter-node": "1.0.0-next.73",
 		"@sveltejs/kit": "1.0.0-next.300",
+		"@types/cookie": "^0.4.1",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"cookie": "^0.4.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -39,6 +43,7 @@
 		"@sentry/browser": "^6.19.2",
 		"@sentry/tracing": "^6.19.2",
 		"colorthief": "^2.3.2",
+		"cookie": "^0.4.1",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.6.0",
@@ -46,7 +51,10 @@
 		"graphql-request": "^3.6.1",
 		"heroku-ssl-redirect": "^0.1.1",
 		"ioredis": "^4.28.2",
+		"node-fetch": "^3.1.0",
+		"sapper-google-analytics": "^1.0.2",
 		"svelte": "^3.34.0",
+		"svelte-content-loader": "^1.1.3",
 		"svelte-seo": "^1.3.1"
 	}
 }
