--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"module": "es2020",
-		"lib": ["es2020", "DOM"],
+		"lib": [
+      "es2020", 
+      "DOM",
+      "ES2021.String"
+    ],
 		"target": "es2020",
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
