--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
 		"svelte-preprocess": "^4.9.4",
 		"svelte-seo": "^1.3.1",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.3",
+		"vite-plugin-chunk-split": "^0.2.2",
+		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-progress": "^0.0.2"
 	},
 	"type": "module",
 	"dependencies": {
