--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3",
 		"vite-plugin-chunk-split": "^0.2.2",
+		"vite-plugin-compress": "^2.1.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-progress": "^0.0.2"
 	},
@@ -44,7 +45,7 @@
 		"colorthief": "^2.3.2",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
-		"firebase": "^9.6.0",
+		"firebase": "^9.8.2",
 		"graphql": "^15.7.2",
 		"graphql-request": "^3.6.1",
 		"heroku-ssl-redirect": "^0.1.1",
