--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lukeed/uuid": "^2.0.0",
 		"@sentry/browser": "^6.19.2",
 		"@sentry/tracing": "^6.19.2",
 		"colorthief": "^2.3.2",
+		"cookie": "^0.5.0",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.8.2",
