--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "1.0.0-next.73",
 		"@sveltejs/kit": "1.0.0-next.300",
+		"@types/bull": "^3.15.8",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"eslint": "^7.32.0",
@@ -43,6 +44,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@sentry/browser": "^6.19.2",
 		"@sentry/tracing": "^6.19.2",
+		"bull": "^4.8.4",
 		"colorthief": "^2.3.2",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
