--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "1.0.0-next.73",
 		"@sveltejs/kit": "1.0.0-next.300",
+		"@types/bull": "^3.15.8",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"eslint": "^7.32.0",
@@ -27,7 +28,7 @@
 		"node-fetch": "^3.1.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.49.0",
+		"svelte": "^3.34.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
 		"svelte-seo": "^1.3.1",
@@ -43,6 +44,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@sentry/browser": "^6.19.2",
 		"@sentry/tracing": "^6.19.2",
+		"bull": "^4.8.4",
 		"colorthief": "^2.3.2",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
@@ -55,7 +57,7 @@
 		"ioredis": "^4.28.2",
 		"request-ip": "^2.2.0",
 		"sitemap": "^7.1.1",
-		"svelte": "^3.49.0",
+		"svelte": "^3.34.0",
 		"svelte-seo": "^1.3.1",
 		"xml-formatter": "^2.6.1"
 	}
