--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
 	"description": "Betarena Official Scores Platform PWA",
 	"version": "0.5.6",
 	"engines": {
-		"npm": "8.3.0",
-		"node": "14.17.4"
+		"npm": "8.18.0",
+		"node": "16.17.0"
 	},
 	"scripts": {
-		"dev": "svelte-kit dev --host --port 3050",
-		"build": "svelte-kit build",
+		"dev": "vite dev --host --port 3050",
+		"build": "vite build",
 		"start": "node my-server.js",
-		"preview": "svelte-kit preview --host --port 5000",
+		"preview": "vite preview --host --port 5000",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "1.0.0-next.73",
-		"@sveltejs/kit": "1.0.0-next.300",
+		"@sveltejs/adapter-node": "1.0.0-next.87",
+		"@sveltejs/kit": "1.0.0-next.439",
 		"@types/bull": "^3.15.8",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"node-fetch": "^3.1.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
@@ -34,16 +34,17 @@
 		"svelte-seo": "^1.3.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3",
+		"vite": "^3.0.8",
 		"vite-plugin-chunk-split": "^0.2.2",
 		"vite-plugin-compress": "^2.1.1",
 		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-progress": "^0.0.2"
+		"vite-plugin-progress": "^0.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
-		"@sentry/browser": "^6.19.2",
-		"@sentry/tracing": "^6.19.2",
+		"@sentry/browser": "^7.11.1",
+		"@sentry/tracing": "^7.11.1",
 		"bull": "^4.8.4",
 		"colorthief": "^2.3.2",
 		"compression": "^1.7.4",
@@ -51,11 +52,11 @@
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.8.2",
-		"graphql": "^15.7.2",
-		"graphql-request": "^3.6.1",
+		"graphql": "^16.6.0",
+		"graphql-request": "^4.3.0",
 		"heroku-ssl-redirect": "^0.1.1",
-		"ioredis": "^4.28.2",
-		"request-ip": "^2.2.0",
+		"ioredis": "^5.2.3",
+		"request-ip": "^3.3.0",
 		"sitemap": "^7.1.1",
 		"svelte": "^3.34.0",
 		"svelte-seo": "^1.3.1",
