updating for a `npm:build` command

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "debug-preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
 		"dev": "vite dev --host --port 3050",
 		"build": "vite build",
-		"start": "node my-server.js",
+    "staging": "npm run dev -- --mode staging",
+    "start": "node my-server.js",
 		"preview": "vite preview --host --port 5000",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
