--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"request-ip": "^3.3.0",
 		"sitemap": "^7.1.1",
 		"svelte-seo": "^1.3.1",
-		"xml-formatter": "^2.6.1"
+		"xml-formatter": "^2.6.1",
+		"zlib": "^1.0.5"
 	}
 }
