--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
 		"debug-preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
+		"debug-bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"dev": "vite dev --host --port 3050",
 		"build": "vite build",
 		"staging": "npm run dev -- --mode staging",
