--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -5,7 +5,7 @@ name = "docker"
 enabled = true
 
   [analyzers.meta]
-  dockerfile_paths = ["https://github.com/Betarena/scores/blob/dev/Dockerfile"]
+  dockerfile_paths = ["Dockerfile"]
 
 [[analyzers]]
 name = "javascript"
