Enhance/feature docker deploy (#1011)
* `update` logs for `PROD` server

* `update` for `Makefile`

* `update` for `.dockerignore`

* `setup` of `Docker` development env

* `update` for `package.json` with `scripts:`

* `.gitignore` update

* `update` for `Docker` in `PROD` deployment

* `update` Makefile

* `update` for `README.md`

* `update` express server for `https`

* add `new` deploy script with `Github Actions`

* `update` github actions test

* `revert` for `http` only support

* `update` for `Makefile`

* `update` for `deploy.yml`

* `revert` for `http` only support

* `add` for `https` deploy

* `update` - `Makefile`

* `update` - `my-server.js`

* issue `990`

* issue `990` - `V1`

* issue #949

* `update` packages

* `update` for `github/actions`

* issue #986

* `logs` update

* `update` for `settings.json`

* `update` issue #986

* `update` for `mobile` view `auth`

* `revert` express for `heroku`

* `revert` express for `heroku`

* `revert` express for `heroku`

* `revert` for `DEV` test `heroku`

* `revert` for `DEV` test `heroku`

* `revert` for `DEV` test `heroku`

* `add` back `AuthWidget`

* issue #1004

* issue #1004

* issue #1004 `checkout`

* `update` example widget

* issue #1004

* issue #1004 `dark-mode` hovers

* issue #1004 `🐞 debug`

* issue #1004 `🐞 debug`

* issue #1004

* issue #1004 `🐞 debug update`

* `revert` to `PROD` of `express-server`

* `deepsource` JS-0239

* `deepsource` JS-0239

* `deepsource` JS-0242

* `deepsource` JS-T1001

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,7 @@
 
 # ==== Builder Image
 FROM node:16.17.0-alpine as build
+
 WORKDIR /app
 
 # [ℹ] Installs required node packages
@@ -19,16 +20,10 @@ RUN apk add --no-cache \
 
 # [ℹ] Builds node application
 COPY . .
-RUN npm run build
 
-# ==== Final Image
-FROM node:16.17.0-alpine as final
-USER node:node
-WORKDIR /app
-
-COPY --from=build /app .
-COPY . .
-
+# Expose port 3000 for the SvelteKit app and 24678 for Vite's HMR
 EXPOSE 5055
+EXPOSE 24678
+
 # CMD ["node", "./build"]
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev-docker"]
