--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"debug-preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
 		"debug-bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"dev": "vite dev --host --port 3050",
+    "dev-docker": "vite dev --host --port 5055",
+    "docker-dev-up": "docker-compose -f docker-compose.dev.yml up",
 		"build": "vite build",
 		"staging": "npm run dev -- --mode staging",
 		"start": "node my-server.js",
@@ -48,6 +50,9 @@
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
+		"@moralisweb3/client-firebase-auth-utils": "^2.11.1",
+		"@moralisweb3/client-firebase-evm-auth": "^2.11.1",
+		"@moralisweb3/next": "^2.11.1",
 		"@sentry/browser": "^7.12.1",
 		"@sentry/tracing": "^7.12.1",
 		"bull": "^4.9.0",
@@ -62,6 +67,8 @@
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
 		"ioredis": "^5.2.3",
+		"moralis": "^2.11.1",
+		"next-auth": "^4.18.8",
 		"request-ip": "^3.3.0",
 		"sitemap": "^7.1.1",
 		"svelte-seo": "^1.3.1",
