--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
           # [ℹ] Navigate to target project directory
           cd web/scores
           # [ℹ] Update the directory with latests changes
-          git pull origin enhance/feature-docker-deploy
+          git pull origin main
           # [ℹ] Run target makefile command
           make update-scores-web
