--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "docker-dev-up": "docker-compose -f docker-compose.dev.yml up",
 		"build": "vite build",
 		"staging": "npm run dev -- --mode staging",
-		"start": "node my-server.js",
+		"start:docker": "node server-docker.js",
+		"start:heroku": "node server-heroku.js",
 		"preview": "vite preview --host --port 5000",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
