--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "my-server.js"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "docker-server.js", "heroku-server.js"]
 }
