--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
 		"node": "16.17.0"
 	},
 	"scripts": {
-		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
-		"debug-preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
-		"debug-bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
-		"dev": "vite dev --host --port 3050",
-    "dev-docker": "vite dev --host --port 5055",
-    "docker-dev-up": "docker-compose -f docker-compose.dev.yml up",
-		"build": "vite build",
-		"staging": "npm run dev -- --mode staging",
-		"start": "node my-server.js",
-		"preview": "vite preview --host --port 5000",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
+		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
+		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
+		"dev": "vite dev --host --port 3050",
+    "dev:docker": "vite dev --host --port 5055",
+    "dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
+		"staging": "npm run dev -- --mode staging",
+		"build": "vite build",
+		"preview": "vite preview --host --port 5000",
+    "start:docker": "node server-docker.js",
+		"start:heroku": "node server-heroku.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "1.0.0-next.88",
