--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "16.17.0"
 	},
 	"scripts": {
-    "check": "svelte-check --tsconfig ./tsconfig.json",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
@@ -15,12 +15,12 @@
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
 		"dev": "vite dev --host --port 3050",
-    "dev:docker": "vite dev --host --port 5055",
-    "dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
+		"dev:docker": "vite dev --host --port 5055",
+		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
 		"staging": "npm run dev -- --mode staging",
 		"build": "vite build",
 		"preview": "vite preview --host --port 5000",
-    "start:docker": "node server-docker.js",
+		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js"
 	},
 	"devDependencies": {
@@ -73,6 +73,7 @@
 		"request-ip": "^3.3.0",
 		"sitemap": "^7.1.1",
 		"svelte-seo": "^1.3.1",
+		"unique-username-generator": "^1.1.3",
 		"xml-formatter": "^2.6.1",
 		"zlib": "^1.0.5"
 	}
