--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"format:src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
 		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 5000",
