--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"start:heroku": "node server-heroku.js"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "1.0.0-next.88",
-		"@sveltejs/kit": "1.0.0-next.477",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/kit": "^1.5.6",
 		"@typescript-eslint/eslint-plugin": "^5.36.2",
 		"@typescript-eslint/parser": "^5.36.2",
 		"cross-env": "^7.0.3",
@@ -37,12 +37,12 @@
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.50.0",
-		"svelte-check": "^2.9.0",
+		"svelte-check": "^3.0.3",
 		"svelte-preprocess": "^4.9.4",
 		"svelte-seo": "^1.3.1",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
-		"vite": "^3.1.0",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.1",
 		"vite-plugin-chunk-split": "^0.4.1",
 		"vite-plugin-compress": "^2.1.1",
 		"vite-plugin-compression": "^0.5.1",
