--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.50.0",
 		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^4.9.4",
-		"svelte-seo": "^1.3.1",
+		"svelte-preprocess": "^5.0.1",
+		"svelte-seo": "^1.5.0",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.1",
+		"vite": "^4.1.2",
 		"vite-plugin-compress": "^2.1.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-progress": "^0.0.3"
@@ -51,17 +51,18 @@
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
-		"@moralisweb3/client-firebase-auth-utils": "^2.11.1",
-		"@moralisweb3/client-firebase-evm-auth": "^2.11.1",
-		"@moralisweb3/next": "^2.11.1",
+		"@metamask/sdk": "^0.1.0",
+		"@moralisweb3/client-firebase-auth-utils": "^2.14.2",
+		"@moralisweb3/client-firebase-evm-auth": "2.14.2",
 		"@sentry/browser": "^7.12.1",
 		"@sentry/tracing": "^7.12.1",
+		"@walletconnect/web3-provider": "1.7.4",
 		"colorthief": "^2.3.2",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
-		"firebase": "^9.9.4",
+		"firebase": "^9.15.0",
 		"graphql": "^16.6.0",
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
@@ -70,7 +71,6 @@
 		"next-auth": "^4.18.8",
 		"request-ip": "^3.3.0",
 		"sitemap": "^7.1.1",
-		"svelte-seo": "^1.3.1",
 		"unique-username-generator": "^1.1.3",
 		"xml-formatter": "^2.6.1",
 		"zlib": "^1.0.5"
