--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,12 +9,17 @@ services:
     restart: always
     environment:
       PORT: ${PORT}
+      VITE_DISCORD_OAUTH_URL: ${VITE_DISCORD_OAUTH_URL}
       VITE_HASURA_DB_URL: ${VITE_HASURA_DB_URL}
       VITE_HASURA_DB_TOKEN: ${VITE_HASURA_DB_TOKEN}
       VITE_FIREBASE_DB_API_KEY: ${VITE_FIREBASE_DB_API_KEY}
       VITE_FIREBASE_DB_AUTH_DOMAIN: ${VITE_FIREBASE_DB_AUTH_DOMAIN}
       VITE_FIREBASE_DB_PROJECT_ID: ${VITE_FIREBASE_DB_PROJECT_ID}
       VITE_FIREBASE_DB_DATABASE_URL: ${VITE_FIREBASE_DB_DATABASE_URL}
+      VITE_FIREBASE_DB_STORAGE_BUCKET: ${VITE_FIREBASE_DB_STORAGE_BUCKET}
+      VITE_FIREBASE_DB_AUTH_DOMAIN_MAIN: ${VITE_FIREBASE_DB_AUTH_DOMAIN_MAIN}
+      VITE_FIREBASE_DB_PROJECT_ID_MAIN: ${VITE_FIREBASE_DB_PROJECT_ID_MAIN}
+      VITE_FIREBASE_DB_DATABASE_URL_MAIN: ${VITE_FIREBASE_DB_DATABASE_URL_MAIN}
       VITE_REDIS_HOST: ${VITE_REDIS_HOST}
       VITE_REDIS_PORT: ${VITE_REDIS_PORT}
       VITE_REDIS_PASS: ${VITE_REDIS_PASS}
