--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,10 +28,10 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.dev
-    # NOTE: enalbe-DEV hot-reload [INPORTANT]
+    # NOTE: enalbe-DEV hot-reload IMPORTANT
     volumes:
       - .:/app
       - /app/node_modules # path as its own volume to avoid copying over local Node modules to Docker
     ports:
       - 5055:5055
-      - 24678:24678
+      - 24678:24678 # IMPORTANT
