--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,20 @@
       "overviewRulerColor": "grey",
       "borderRadius": "2px"
     },
+    {
+      "text": "//#region",
+      "color": "#ffffff",
+      "backgroundColor": "#131313",
+      "overviewRulerColor": "grey",
+      "borderRadius": "2px"
+    },
+    {
+      "text": "//#endregion",
+      "color": "#000000",
+      "backgroundColor": "#444444",
+      "overviewRulerColor": "grey",
+      "borderRadius": "2px"
+    },
     // DOC: for indicating a source/link for a target
     // DOC: process and how-to
     {
@@ -89,5 +103,23 @@
   "maptz.regionfolder": {
     "collapseAllRegions": true,
     "collapseDefaultRegionsOnOpen": true
-  }
+  },
+  // NOTE: speeding up CSS STYLE location and importing
+  "css.styleSheets": [
+    // "https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css", // example
+    "/src/app.css"
+  ],
+  // IMPORTANTNOTE: configured in user/settings.json
+  "css.enabledLanguages": [
+    "html",
+    "svelte"
+  ],
+  // NOTE: does not work for SVELTE
+  "cssPeek.peekFromLanguages": [
+    "html",
+    "svelte"
+  ],
+  // "[css]": {
+  //   "editor.foldingStrategy": "indentation",
+  // },
 }
