--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@betarena/scores-lib": "^0.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.14.2",
