--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,7 @@
     {
       "text": "//#endregion",
       "color": "#000000",
-      "backgroundColor": "#444444",
+      "backgroundColor": "orange",
       "overviewRulerColor": "grey",
       "borderRadius": "2px"
     },
