--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,9 @@
       "borderRadius": "2px"
     }
   ],
-  // NOTE: SVELTE Specific Extensions (Config)
+  // -----------
+  // NOTE: [BELOW] SVELTE Specific Extensions (Config)
+  // -----------
   // DOC: https://discord.com/channels/457912077277855764/1036919129782878218
   // DOC: https://discord.com/channels/457912077277855764/1036369208721813554
   "svelte.plugin.svelte.compilerWarnings": {
