chore: update scores-lib 0.7.1; imports (up);

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"quick:preview:local:spin": "vite build && npm run preview",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
-		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib",
+		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
 		"@betarena/scores-lib:link": "npm link @betarena/scores-lib"
 	},
 	"devDependencies": {
@@ -50,7 +50,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@betarena/scores-lib": "^0.5.7",
+		"@betarena/scores-lib": "^0.7.1",
 		"@lukeed/uuid": "^2.0.0",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.14.2",
