--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
       "color": "#ffffff",
       "backgroundColor": "#131313",
       "overviewRulerColor": "grey",
+      "isWholeLine": true,
       "borderRadius": "2px"
     },
     {
@@ -38,6 +39,7 @@
       "color": "#000000",
       "backgroundColor": "orange",
       "overviewRulerColor": "grey",
+      "isWholeLine": true,
       "borderRadius": "2px"
     },
     {
@@ -75,7 +77,7 @@
     }
   ],
   // -----------
-  // NOTE: [BELOW] SVELTE Specific Extensions (Config)
+  // NOTE: [BELOW] SVELTE development specific extensions (Config)
   // -----------
   // DOC: https://discord.com/channels/457912077277855764/1036919129782878218
   // DOC: https://discord.com/channels/457912077277855764/1036369208721813554
@@ -132,4 +134,12 @@
   // "[css]": {
   //   "editor.foldingStrategy": "indentation",
   // },
+  "material-icon-theme.folders.associations": {
+    "redis": "Database",
+    "player": "Layout",
+    "fixture": "Layout",
+    "home": "Layout",
+    "league": "Layout",
+    "profile": "Layout"
+  }
 }
