--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,7 @@
   // NOTE: speeding up CSS STYLE location and importing
   "css.styleSheets": [
     // "https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css", // example
-    "/src/app.css"
+    "/static/app.css"
   ],
   // IMPORTANTNOTE: configured in user/settings.json
   "css.enabledLanguages": [
