fix: node-version exact;

--- a/.github/workflows/pr-main-tag.yml
+++ b/.github/workflows/pr-main-tag.yml
@@ -140,10 +140,11 @@ jobs:
           ref: dev
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16.17.0
       - name: 'build check'
         run: | 
           npm ci
+          npm install -g npm@8.19.1
           npm install
           npm run build
 
