--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -30,10 +30,11 @@ jobs:
           ref: dev
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16.17.0
       - name: 'Build npm'
         run: | 
           npm ci
+          npm install -g npm@8.19.1
           npm install
           npm run build
 
