fix: node-version exact;

--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -31,10 +31,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.17.0
-      - name: 'Build npm'
+      - name: '🏗️ Set npm version'
+        run: |
+          npm install -g npm@8.19.1
+      - name: '🟩 Build npm'
         run: | 
           npm ci
-          npm install -g npm@8.19.1
           npm install
           npm run build
 
