--- a/.github/workflows/pr-main-tag.yml
+++ b/.github/workflows/pr-main-tag.yml
@@ -141,10 +141,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.17.0
-      - name: 'build check'
+      - name: '🏗️ Set npm version'
+        run: |
+          npm install -g npm@8.19.1
+      - name: '🟩 Build npm'
         run: | 
           npm ci
-          npm install -g npm@8.19.1
           npm install
           npm run build
 
@@ -172,7 +174,10 @@ jobs:
       - name: node config
         uses: actions/setup-node@v3
         with:
-          node-version: 16 
+          node-version: 16.17.0
+      - name: '🏗️ Set npm version'
+        run: |
+          npm install -g npm@8.19.1
       - name: git config
         run: |
           git config --global user.email "${{ secrets.GH_ORG_EMAIL }}"
