--- a/.github/workflows/pr-main-tag.yml
+++ b/.github/workflows/pr-main-tag.yml
@@ -22,7 +22,7 @@ env:
       - closed
     branches:
       - main
-      
+
 jobs:
 
   # npm-version-bump-test:
@@ -33,7 +33,7 @@ jobs:
     # NOTE: anothrNick/github-tag-action
     # NOTE: -> creates and bumps TAG version of the REPO
     # NOTE: -> in PR, the SQUASH MERGE needs the #patch/#major/#minor to be in the "commit-merge" message
-    # NOTE: -> ✅ works!, 
+    # NOTE: -> ✅ works!,
     # NOTE: -> ❌ but does not update the `package.json` according to <version-type>
     # region #1
     # - uses: actions/checkout@v3
@@ -50,9 +50,9 @@ jobs:
     #     # (optional) - Set initial version before bump. Default 0.0.0.
     #     INITIAL_VERSION: 0.7.1
     # endregion #1
-      
+
     # NOTE: phips28/gh-action-bump-version
-    # NOTE: [DESC] This Action bumps the version in package.json and pushes it back to the repo. 
+    # NOTE: [DESC] This Action bumps the version in package.json and pushes it back to the repo.
     # NOTE: [DESC] It is meant to be used on every successful merge to master but you'll need to configure that workflow yourself.
     # NOTE: -> uses version: that of the package.json for bump/update
     # NOTE: -> ✅ & updates the package.json itself!;
@@ -119,7 +119,7 @@ jobs:
     # - name: Update version in package.json
     #   uses: maks-stupak/gh-action-bump-version@v7.1.5
     # endregion #4
-    
+
     # NOTE: ALTERNATIVE (#4)
     # NOTE: -> exact copy of SAMPLE-EXAMPLE worklfow provided;
     # NOTE: -> https://github.com/maks-stupak/gh-action-bump-version/blob/v7.1.5/.github/workflows/push.yml
@@ -145,7 +145,7 @@ jobs:
         run: |
           npm install -g npm@8.19.1
       - name: '🟩 Build npm'
-        run: | 
+        run: |
           npm ci
           npm install
           npm run build
@@ -153,7 +153,7 @@ jobs:
   # -----------------------
   # NOTE:
   # -> (on valid) bumps npm version
-  # -> of (this) repository to 
+  # -> of (this) repository to
   # -> a specified target;
   # -----------------------
   npm-version-bump:
@@ -203,10 +203,10 @@ jobs:
       - id: step1
         name: BUMP - check
         # if: contains(github.event.pull_request.labels.*.name, 'major')
-        if: '${{ 
-            contains(env.PATCH_WORDING, github.event.pull_request.title) 
-            || contains(env.MINOR_WORDING, github.event.pull_request.title) 
-            || contains(env.MAJOR_WORDING, github.event.pull_request.title) 
+        if: '${{
+            contains(env.PATCH_WORDING, github.event.pull_request.title)
+            || contains(env.MINOR_WORDING, github.event.pull_request.title)
+            || contains(env.MAJOR_WORDING, github.event.pull_request.title)
           }}'
         # see: https://michaelcurrin.github.io/dev-cheatsheets/cheatsheets/ci-cd/github-actions/persist.html
         # see: https://stackoverflow.com/questions/58177786/get-the-current-pushed-tag-in-github-actions
@@ -218,7 +218,7 @@ jobs:
         run: git push origin main --follow-tags --force
       - id: set-version
         name: output/set version change
-        run: | 
+        run: |
           npm pkg get version
           echo "release_tag=$(npm pkg get version --workspaces=false | tr -d \") ">> $GITHUB_OUTPUT
       - name: check output/set version
@@ -245,7 +245,7 @@ jobs:
       - name: node config
         uses: actions/setup-node@v3
         with:
-          node-version: 16 
+          node-version: 16
       - name: git config
         run: |
           git config --global user.email "${{ secrets.GH_ORG_EMAIL }}"
@@ -283,3 +283,30 @@ jobs:
           automatic_release_tag: "v${{ env.RELEASE_TAG }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
+
+  # -----------------------
+  # NOTE: [STASHED]
+  # -> deploys target MAIN
+  # -> after successfull "bump" & "release";
+  # -> dependent on "create-release"
+  # -----------------------
+  # deploy:
+  #   name: 🚀 Deployment
+  #   needs: create-release
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #   - name: executing remote ssh commands using password
+  #     uses: appleboy/ssh-action@v0.1.7
+  #     # [ℹ] declaring ENV variables to be used in the project-CI/CD
+  #     with:
+  #       host: ${{secrets.WEB_SERVER_HOST}}
+  #       username: ${{secrets.WEB_SERVER_USERNAME}}
+  #       key: ${{secrets.WEB_SERVER_KEY}}
+  #       port: ${{secrets.WEB_SERVER_PORT}}
+  #       script: |
+  #         # [ℹ] Navigate to target project directory
+  #         cd web/scores
+  #         # [ℹ] Update the directory with latests changes
+  #         git pull origin main
+  #         # [ℹ] Run target makefile command
+  #         make update-scores-web
